plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.11'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example.first'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.json:json:20210307'

    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    //jwt
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // swagger
    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.20'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    // JAXB API
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    // JAXB Runtime
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'com.konghq:unirest-java:3.13.0'

    //mailsender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //aws File S3, Cloudfront upload
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.1")
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.1'
    implementation 'software.amazon.awssdk:s3'

}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}